--- a/package.json
+++ b/package.json
@@ -133,7 +133,6 @@
     "libp2p-kad-dht": "~0.14.12",
     "libp2p-keychain": "~0.4.1",
     "libp2p-mdns": "~0.12.0",
-    "libp2p-mplex": "~0.8.4",
     "libp2p-record": "~0.6.1",
     "libp2p-secio": "~0.11.0",
     "libp2p-tcp": "~0.13.0",
@@ -162,6 +161,7 @@
     "pull-cat": "^1.1.11",
     "pull-defer": "~0.2.3",
     "pull-file": "^1.1.0",
+    "pull-mplex": "~0.1.0",
     "pull-ndjson": "~0.1.1",
     "pull-pushable": "^2.2.0",
     "pull-sort": "^1.0.1",
