chore: fix deps linter

--- a/package.json
+++ b/package.json
@@ -116,8 +116,8 @@
     "ipfs-unixfs-importer": "~0.38.5",
     "ipld": "~0.21.1",
     "ipld-bitcoin": "~0.1.8",
-    "ipld-dag-cbor": "^0.13.1",
-    "ipld-dag-pb": "^0.15.3",
+    "ipld-dag-cbor": "~0.13.1",
+    "ipld-dag-pb": "~0.15.3",
     "ipld-ethereum": "^2.0.1",
     "ipld-git": "~0.3.0",
     "ipld-raw": "^2.0.1",
